--- a/app/src/main/res/layout/fragment_view_group.xml
+++ b/app/src/main/res/layout/fragment_view_group.xml
@@ -11,10 +11,10 @@
         android:id="@+id/titleView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="24dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="16dp"
         android:text="@string/new_task"
         android:textColor="?colorAccent"
         android:textSize="24sp"
@@ -25,8 +25,8 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/titleView"
         android:layout_gravity="bottom"
-        android:layout_marginBottom="16dp"
         android:layout_marginTop="64dp"
+        android:layout_marginBottom="16dp"
         android:orientation="vertical"
         app:layout_anchor="@id/titleView"
         app:layout_anchorGravity="bottom">
@@ -46,9 +46,9 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="24dp"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="16dp"
+                android:layout_marginEnd="24dp"
                 android:gravity="center"
                 android:text="@string/you_complete_all_your_tasks"
                 android:textColor="?colorAccent"
@@ -60,8 +60,8 @@
             android:id="@+id/tasksList"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginEnd="24dp"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="@dimen/list_margin"
+            android:layout_marginEnd="@dimen/list_margin"
             android:overScrollMode="never"
             android:scrollbars="none"
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
@@ -73,8 +73,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_marginBottom="16dp"
         android:layout_marginEnd="128dp"
+        android:layout_marginBottom="16dp"
         android:layout_toStartOf="@+id/fab"
         android:tint="?colorPrimary"
         app:fabSize="mini"
@@ -85,8 +85,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_marginBottom="16dp"
         android:layout_marginEnd="72dp"
+        android:layout_marginBottom="16dp"
         android:layout_toStartOf="@+id/fabAdd"
         android:tint="?colorPrimary"
         app:fabSize="mini"
