--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -16,10 +16,10 @@
             android:id="@+id/titleView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:layout_marginEnd="24dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginBottom="16dp"
             android:text="@string/new_task"
             android:textColor="?colorAccent"
             android:textSize="24sp"
@@ -28,8 +28,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="@dimen/material_margin"
+            android:layout_marginEnd="@dimen/material_margin"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
@@ -43,7 +43,8 @@
                 android:hint="@string/summary"
                 android:inputType="textMultiLine"
                 android:maxLines="10"
-                android:padding="8dp"
+                android:paddingTop="8dp"
+                android:paddingBottom="8dp"
                 android:textSize="24sp"
                 android:textStyle="bold" />
 
@@ -51,8 +52,8 @@
                 android:id="@+id/favouriteView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
                 android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
                 android:button="@drawable/favourite_check_states" />
 
         </LinearLayout>
@@ -61,9 +62,9 @@
             android:id="@+id/groupTitleView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="24dp"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="@dimen/material_margin"
             android:layout_marginTop="16dp"
+            android:layout_marginEnd="@dimen/material_margin"
             android:background="@drawable/group_title_bg"
             android:elevation="1dp"
             android:padding="8dp"
@@ -76,9 +77,9 @@
             android:id="@+id/bannerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="24dp"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="@dimen/material_margin"
             android:layout_marginTop="16dp"
+            android:layout_marginEnd="@dimen/material_margin"
             android:background="@drawable/group_banner_bg"
             android:gravity="center_vertical"
             android:orientation="horizontal"
@@ -111,11 +112,11 @@
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
         android:layout_gravity="bottom|end"
         android:layout_margin="16dp"
-        app:tint="?colorPrimary"
         app:fabSize="mini"
-        app:srcCompat="@drawable/ic_arrow_back_white" />
+        app:srcCompat="@drawable/ic_arrow_back_white"
+        app:tint="?colorPrimary" />
 </RelativeLayout>
