--- a/app/src/main/res/layout/fragment_backup_settings.xml
+++ b/app/src/main/res/layout/fragment_backup_settings.xml
@@ -31,8 +31,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="24dp"
+                android:layout_marginStart="@dimen/material_margin"
+                android:layout_marginEnd="@dimen/material_margin"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
@@ -57,9 +57,9 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="@dimen/material_margin"
                 android:layout_marginTop="16dp"
-                android:layout_marginEnd="24dp"
+                android:layout_marginEnd="@dimen/material_margin"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
