--- a/app/src/main/res/layout/fragment_font_size.xml
+++ b/app/src/main/res/layout/fragment_font_size.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:background="?colorPrimary"
     tools:context="com.github.naz013.tasker.settings.FontSizeSettingsFragment">
 
@@ -11,10 +11,11 @@
         android:id="@+id/titleView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="24dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="16dp"
+        android:fontFamily="@font/oswald_bold"
         android:text="@string/font_size"
         android:textColor="?colorAccent"
         android:textSize="24sp"
@@ -38,8 +39,8 @@
         android:layout_below="@+id/titleView"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center"
-        android:layout_marginBottom="56dp"
         android:layout_marginTop="56dp"
+        android:layout_marginBottom="56dp"
         app:backgroundColor="?colorAccent"
         app:cornerRadiusSb="20"
         app:defaultValue="11"
@@ -57,8 +58,8 @@
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
         android:layout_gravity="bottom|end"
         android:layout_margin="16dp"
         android:tint="?colorPrimary"
