--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,6 +9,7 @@
         android:id="@+id/titleView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/oswald_bold"
         android:padding="16dp"
         android:text="@string/app_name"
         android:textColor="?colorAccent"
@@ -39,6 +40,7 @@
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="24dp"
+                android:fontFamily="@font/oswald_medium"
                 android:gravity="center"
                 android:text="@string/there_is_no_groups_go_to_settings_to_add_one"
                 android:textColor="?colorAccent"
