--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -10,10 +10,11 @@
         android:id="@+id/titleView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="24dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="16dp"
+        android:fontFamily="@font/oswald_bold"
         android:text="@string/about"
         android:textColor="?colorAccent"
         android:textSize="24sp"
@@ -42,6 +43,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:fontFamily="@font/oswald_bold"
                 android:text="@string/app_name"
                 android:textColor="?colorAccent"
                 android:textSize="24sp"
@@ -53,6 +55,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="8dp"
+                android:fontFamily="@font/oswald_medium"
                 android:textColor="?colorAccent"
                 android:textSize="18sp"
                 tools:text="1.0.2" />
@@ -62,6 +65,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="8dp"
+                android:fontFamily="@font/oswald_regular"
                 android:text="@string/copyright"
                 android:textColor="?colorAccent"
                 android:textSize="18sp" />
@@ -71,6 +75,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="8dp"
+                android:fontFamily="@font/oswald_regular"
                 android:text="@string/design_by_johnyvino_uplabs"
                 android:textColor="?colorAccent"
                 android:textSize="18sp" />
@@ -80,6 +85,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="8dp"
+                android:fontFamily="@font/oswald_regular"
                 android:text="@string/icons_from_flaticon_com"
                 android:textColor="?colorAccent"
                 android:textSize="18sp" />
@@ -87,9 +93,9 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
                 android:orientation="horizontal"
                 android:weightSum="3">
 
@@ -113,6 +119,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
+                        android:fontFamily="@font/oswald_regular"
                         android:gravity="center"
                         android:maxLines="2"
                         android:text="@string/rate_app"
@@ -141,6 +148,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
+                        android:fontFamily="@font/oswald_regular"
                         android:gravity="center"
                         android:maxLines="2"
                         android:text="@string/send_feedback"
@@ -169,6 +177,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
+                        android:fontFamily="@font/oswald_regular"
                         android:gravity="center"
                         android:maxLines="2"
                         android:text="@string/source_code"
@@ -181,9 +190,9 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
                 android:orientation="horizontal"
                 android:weightSum="3">
 
@@ -207,6 +216,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
+                        android:fontFamily="@font/oswald_regular"
                         android:gravity="center"
                         android:maxLines="2"
                         android:text="@string/more_apps"
@@ -235,6 +245,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
+                        android:fontFamily="@font/oswald_regular"
                         android:gravity="center"
                         android:maxLines="2"
                         android:text="@string/web_site"
@@ -251,8 +262,8 @@
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
         android:layout_gravity="bottom"
         android:layout_margin="16dp"
         android:tint="?colorPrimary"
