--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -9,10 +9,11 @@
         android:id="@+id/titleView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="24dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="16dp"
+        android:fontFamily="@font/oswald_bold"
         android:text="@string/settings"
         android:textColor="?colorAccent"
         android:textSize="24sp"
@@ -24,9 +25,9 @@
         android:layout_below="@+id/titleView"
         android:orientation="vertical"
         android:overScrollMode="never"
-        android:paddingBottom="16dp"
-        android:paddingEnd="16dp"
         android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:paddingBottom="16dp"
         android:scrollbars="none">
 
         <LinearLayout
@@ -62,6 +63,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
+                        android:fontFamily="@font/oswald_regular"
                         android:gravity="center"
                         android:maxLines="2"
                         android:text="@string/groups"
@@ -91,6 +93,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
+                        android:fontFamily="@font/oswald_regular"
                         android:gravity="center"
                         android:maxLines="2"
                         android:text="@string/favorite_first"
@@ -119,6 +122,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
+                        android:fontFamily="@font/oswald_regular"
                         android:gravity="center"
                         android:maxLines="2"
                         android:text="@string/font_size"
@@ -156,6 +160,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
+                        android:fontFamily="@font/oswald_regular"
                         android:gravity="center"
                         android:maxLines="2"
                         android:text="@string/clear_every_day"
@@ -185,6 +190,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
+                        android:fontFamily="@font/oswald_regular"
                         android:gravity="center"
                         android:maxLines="2"
                         android:text="@string/uncheck_tasks_on_new_day"
@@ -214,6 +220,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
+                        android:fontFamily="@font/oswald_regular"
                         android:gravity="center"
                         android:maxLines="2"
                         android:text="@string/backup"
@@ -251,6 +258,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
+                        android:fontFamily="@font/oswald_regular"
                         android:gravity="center"
                         android:maxLines="2"
                         android:text="@string/notification_on_boot"
@@ -280,6 +288,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
+                        android:fontFamily="@font/oswald_regular"
                         android:gravity="center"
                         android:maxLines="2"
                         android:text="@string/dark_mode"
@@ -308,6 +317,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
+                        android:fontFamily="@font/oswald_regular"
                         android:gravity="center"
                         android:maxLines="2"
                         android:text="@string/about"
@@ -324,8 +334,8 @@
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
         android:layout_gravity="bottom|end"
         android:layout_margin="16dp"
         android:tint="?colorPrimary"
