--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -20,6 +20,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="16dp"
+            android:fontFamily="@font/oswald_bold"
             android:text="@string/new_task"
             android:textColor="?colorAccent"
             android:textSize="24sp"
@@ -39,6 +40,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@null"
+                android:fontFamily="@font/oswald_regular"
                 android:gravity="start"
                 android:hint="@string/summary"
                 android:inputType="textMultiLine"
@@ -53,7 +55,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
                 android:button="@drawable/favourite_check_states" />
 
         </LinearLayout>
@@ -67,6 +68,7 @@
             android:layout_marginEnd="@dimen/material_margin"
             android:background="@drawable/group_title_bg"
             android:elevation="1dp"
+            android:fontFamily="@font/oswald_regular"
             android:padding="8dp"
             android:textAllCaps="true"
             android:textColor="@color/colorPrimary"
@@ -90,6 +92,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:elevation="1dp"
+                android:fontFamily="@font/oswald_medium"
                 android:padding="8dp"
                 android:text="@string/task_automatically_saves_on_exit"
                 android:textColor="@color/colorAccent"
