--- a/app/src/main/res/layout/fragment_add_group.xml
+++ b/app/src/main/res/layout/fragment_add_group.xml
@@ -19,6 +19,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="16dp"
+            android:fontFamily="@font/oswald_bold"
             android:text="@string/new_group"
             android:textColor="?colorAccent"
             android:textSize="24sp"
@@ -31,6 +32,7 @@
             android:layout_marginStart="@dimen/material_margin"
             android:layout_marginEnd="@dimen/material_margin"
             android:background="@null"
+            android:fontFamily="@font/oswald_regular"
             android:gravity="start"
             android:hint="@string/name"
             android:imeOptions="actionDone"
@@ -75,6 +77,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:elevation="1dp"
+                android:fontFamily="@font/oswald_medium"
                 android:padding="8dp"
                 android:text="@string/group_automatically_saves_on_exit"
                 android:textColor="@color/colorAccent"
