--- a/app/src/main/res/layout/item_group.xml
+++ b/app/src/main/res/layout/item_group.xml
@@ -9,8 +9,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        app:cardUseCompatPadding="true"
         app:cardElevation="1dp"
+        app:cardUseCompatPadding="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/groupTitleView">
@@ -25,9 +25,9 @@
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:layout_gravity="end"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="16dp"
                 android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="8dp"
                 android:tint="?colorAccent"
                 app:srcCompat="@drawable/ic_add_circle" />
 
@@ -35,9 +35,9 @@
                 android:id="@+id/tasksList"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="24dp"
-                android:layout_marginEnd="16dp"
                 android:layout_marginStart="24dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="24dp"
                 android:orientation="vertical" />
 
         </LinearLayout>
@@ -51,6 +51,7 @@
         android:layout_marginTop="16dp"
         android:background="@drawable/group_title_bg"
         android:elevation="2dp"
+        android:fontFamily="@font/oswald_medium"
         android:padding="8dp"
         android:textAllCaps="true"
         android:textColor="@color/black"
