--- a/app/src/main/res/layout/item_group_check.xml
+++ b/app/src/main/res/layout/item_group_check.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardUseCompatPadding="true">
@@ -23,13 +24,14 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
             android:layout_weight="1"
+            android:fontFamily="@font/oswald_regular"
             android:maxLines="2"
-            android:text="Hello"
             android:textColor="?colorAccent"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            tools:text="Hello" />
 
     </LinearLayout>
 </com.google.android.material.card.MaterialCardView>
