--- a/app/src/main/res/layout/item_group_edit.xml
+++ b/app/src/main/res/layout/item_group_edit.xml
@@ -25,9 +25,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
             android:layout_weight="1"
+            android:fontFamily="@font/oswald_regular"
             android:maxLines="2"
             android:textColor="?colorAccent"
             android:textSize="18sp"
